--- a/exercise_00_answers.Rmd
+++ b/exercise_00_answers.Rmd
@@ -6,35 +6,35 @@ output: html_notebook
 
 ## exercise 00:  
 
-3. 
+1. Load the tidyverse libary package
 
 ```{r}
 library(tidyverse)
 ```
 
-
-4. and 
-5.
+2.  Fill in the blanks.  Using what you've seen in class, if `data/brodheadCenter.csv` is a CSV (comma separated values) file, how would you load the file into a new object called `brodhead`?
 
 ```{r}
-brodhead <- read_csv("data/brodheadCenter.csv")
+brodhead  <- read_csv("data/brodheadCenter.csv")
 ```
 
 
-6.
+3. Display your new `brodhead` data frame?
 
 ```{r}
 brodhead
 ```
 
 
-7.
+4.  `starwars` is an on-board dataset that comes with the tidyverse.  Insert a new code chunk and display that data.  
 
 ```{r}
 starwars
 ```
 
-8.
+5.  Copy and paste the following code into a new code chunk in your new file.  
+
+
 ```{r}
 starwars %>% 
   ggplot(aes(fct_infreq(hair_color))) + 
@@ -42,12 +42,13 @@ starwars %>%
   ggtitle("Hair Color Frequency of Star Wars Characters")
 ```
 
+6. Take a look at the structure of the `brodhead` object.
+    - How many observations (rows) are there?
+    - How many variables (columns) are there?
+    - How many of the variables are numeric data?
 
-9.
 ```{r}
 glimpse(brodhead)
 ```
 
-- How many observations (rows) are there?  59
-- How many variables (columns) are there?  7
-- How many of the variables are numeric data? 2
+
