--- a/urls_for_class.Rmd
+++ b/urls_for_class.Rmd
@@ -5,11 +5,29 @@ date: "`r Sys.Date()`"
 output: github_document
 ---
 
+## Attendance
+
+1. https://forms.gle/nvW7KFReGoh8c13g7
+
+## Pre Survey
+
+2. https://forms.gle/BpqwQLwArSddVerz5
+
 ## Introduction to R
 
-[Slide Deck](https://rfun.library.duke.edu/intro2r/slides)  
-
 [Shareable Code: GitHub Repository](https://github.com/libjohn/intro2r-code)
+
+[Video](https://youtu.be/NtfHcNlwSEY)
+
+[Slide Deck](https://rfun.library.duke.edu/intro2r/slides) 
+
+### Links
+
+- Surveys
+
+    - [Pre-survey](https://forms.gle/BpqwQLwArSddVerz5)
+    - Questions during workshop:  Use Zoom Chat
+    - [Post-Survey](https://forms.gle/xKTVmtijMJYVAFxB9)
 
 ### Surveys / Questions
 
@@ -21,6 +39,7 @@ output: github_document
 
 - https://rstudio.cloud/learn/primers/
 - https://education.rstudio.com/learn/
+-	[Master the Tidyverse](https://github.com/rstudio/master-the-tidyverse)
 
 
 ### Rfun @ Duke
@@ -36,10 +55,4 @@ output: github_document
 - [Slack](https://ropenlabs.slack.com)  		
 - [Sympa List](https://lists.duke.edu/sympa/info/ropenlabs)
 - [RTP Rladies](https://www.meetup.com/rladies-rtp/events/)
-
-### ROpenLabs
-
-- [Meeting times](https://rfun.library.duke.edu/portfolio/r_open_labs/)
-- [GitHub ROpenLabs](https://github.com/libjohn/ropenlabs)
--	[Master the Tidyverse](https://github.com/rstudio/master-the-tidyverse)
 
