--- a/slides/slides_2021-03-16.Rmd
+++ b/slides/slides_2021-03-16.Rmd
@@ -90,12 +90,11 @@ library.duke.edu/<a href="https://library.duke.edu/data">data</a>]
 I would like to take a moment to honor the land in Durham, NC.  Duke University sits on the ancestral lands of the Shakori, Eno and Catawba people. This institution of higher education is built on land stolen from those peoples.  These tribes were here before the colonizers arrived.  Additionally this land has borne witness to over 400 years of the enslavement, torture, and systematic mistreatment of African people and their descendants.  Recognizing this history is an honest attempt to breakout beyond persistent patterns of colonization and to rewrite the erasure of Indigenous and Black peoples.  There is value in acknowledging the history of our occupied spaces and places.  I hope we can glimpse an understanding of these histories by recognizing the origins of collective journeys.
 
 ---
-background-image: url(images/who_we_are_20210128.svg)
+background-image: url(images/who-we-are_20210316.svg)
 background-size: contain
 
-who we are
-
 ---
+exclude: true
 background-image: url(images/who_we_are_facet_20210128.svg)
 background-size: contain
 
@@ -113,7 +112,7 @@ pre_workshop %>%
   geom_point() +
   scale_y_continuous(minor_breaks = NULL) +
   scale_x_continuous(minor_breaks = NULL, 
-                     breaks = seq(69, 70, 1),
+                     breaks = seq(69, 74, 1),
                      labels = wday(pre_workshop$Timestamp, label=TRUE) %>% unique() ) +
   ylim(0,16) +
   labs(title = "Responses over time",
