--- a/slides/slides_2021-03-16.Rmd
+++ b/slides/slides_2021-03-16.Rmd
@@ -102,7 +102,7 @@ who we are
 
 ---
 ```{r response rate plot, echo=FALSE, fig.height=7, fig.width=10, message=FALSE, warning=FALSE, dev="svg"}
-total_reg <-  70
+total_reg <-  76
 
 pre_workshop %>% 
   mutate(day = lubridate::yday(Timestamp)) %>%
@@ -110,12 +110,13 @@ pre_workshop %>%
   ggplot(aes(day, n)) +
   geom_line() +
   geom_point() +
-  scale_y_continuous(minor_breaks = NULL) +
+  scale_y_continuous(#minor_breaks = NULL,
+                     breaks = seq(0,20, 2)) +
   scale_x_continuous(minor_breaks = NULL, 
-                     breaks = seq(69, 74, 1),
+                     breaks = seq(69, 75, 1),
                      labels = wday(pre_workshop$Timestamp, label=TRUE) %>% unique() ) +
-  ylim(0,16) +
-  labs(title = "Responses over time",
+  # ylim(0,20) +
+  labs(title = "Survey responses over time",
        subtitle = glue::glue("n = {nrow(pre_workshop)} ; Response rate: {scales::percent(nrow(pre_workshop) / total_reg)}"), 
        caption = "Source:  Pre-workshop survey", y = "", x="")
 ```
@@ -266,6 +267,34 @@ Use the smallest, simplest, most built-in data possible
 Include commands on a strict “need to run” basis
 ]
 
+
+---
+class: middle, center
+
+# Assignment
+
+Create an object using a name
+
+## `<-`
+alt-dash
+
+"gets value from"
+
+`answer <- 5 * 5`
+
+---
+class: middle, center
+
+# Pipe
+
+Chain functions together (a tidyverse or magritter conjunction)
+
+## `%>%`  
+Ctrl/Cmd-Shift-M
+
+"and then"
+
+`answer %>% sqrt()`
 
 
 ---
