badge swag, binder config, GH languages

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,9 @@ output: github_document
 <!-- badges: start -->
 [![DOI](https://zenodo.org/badge/220037220.svg)](https://zenodo.org/badge/latestdoi/220037220)
 
-[![Lifecycle Badge](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
+[![ORCID](https://img.shields.io/badge/ORCID-0000--0002--3600--0972-A6CE39?logo=ORCID&logoColor=A6CE39 "ORCID")](https://orcid.org/0000-0002-3600-0972)
+
+[![Creative Commons CC BY-NC](https://img.shields.io/badge/Creative Commons-BY--NC-EF9421?logo=creative commons&logoColor=EF9421 "CC BY-NC")](https://creativecommons.org/licenses/by-nc-nd/4.0/)  
 
 [![Launch Rstudio Binder](http://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/libjohn/intro2r-code/master?urlpath=rstudio)
 <!-- badges: end -->
